Grammer: you will -> you

--- a/docs/content/guides/developer/app-examples/trustless-swap.mdx
+++ b/docs/content/guides/developer/app-examples/trustless-swap.mdx
@@ -1039,7 +1039,7 @@ With the code successfully deployed on Testnet, you can now [create a frontend](
 
 ## Frontend {#frontend}
 
-In this final part of the app example, you will build a frontend (UI) that allows end-users to discover trades and interact with listed escrows.
+In this final part of the app example, you build a frontend (UI) that allows end-users to discover trades and interact with listed escrows.
 
 ### Prerequisites
 
