--- a/docs/content/guides/developer/app-examples/trustless-swap.mdx
+++ b/docs/content/guides/developer/app-examples/trustless-swap.mdx
@@ -982,7 +982,7 @@ pnpm dev
 
 5. Visit [http://localhost:3000/escrows](http://localhost:3000/escrows) or [http://localhost:3000/locked](http://localhost:3000/locked)
 
-### Demo Data<a name="demo-data"></a> {#demo-data}
+### Demo data {#demo-data}
 
 {@include: ../../../snippets/initialize-sui-client-cli.mdx}
 
