--- a/docs/content/guides/developer/app-examples/trustless-swap.mdx
+++ b/docs/content/guides/developer/app-examples/trustless-swap.mdx
@@ -972,7 +972,7 @@ pnpm install --ignore-workspace
 pnpm db:setup:dev
 ```
 
-3. [Publish the contract & demo data](#demo-data)
+3. [Publish the contract and demo data](#demo-data)
 
 4. Run both the API and the indexer
 
