tailwind css explanation

--- a/docs/content/guides/developer/app-examples/trustless-swap.mdx
+++ b/docs/content/guides/developer/app-examples/trustless-swap.mdx
@@ -1102,7 +1102,7 @@ This aligns with the `tsconfig.json` setup, ensuring that both TypeScript and Vi
 
 ### Adding Tailwind CSS
 
-This app uses Tailwind CSS for styling. Run the following command to add Tailwind CSS and its dependencies:
+To streamline the styling process and keep the codebase clean and maintainable, we’ll be using Tailwind CSS, which provides utility-first CSS classes to rapidly build custom designs. Run the following command to add Tailwind CSS and its dependencies:
 
 ```bash
 pnpm add tailwindcss@latest postcss@latest autoprefixer@latest
