Made helpers and components collapsable

--- a/docs/content/guides/developer/app-examples/trustless-swap.mdx
+++ b/docs/content/guides/developer/app-examples/trustless-swap.mdx
@@ -1138,27 +1138,44 @@ Then, create a `src/constants.ts` file and fill it with the following:
 
 ### Add helper functions and UI components
 
-Create a `src/utils/` directory and add `helpers.ts`: 
+Create a `src/utils/` directory and add the following file: 
 
-{@inject: examples/trading/frontend/src/utils/helpers.ts}
+<details>
+  <summary>
+    `helpers.ts`
+  </summary>
+  {@inject: examples/trading/frontend/src/utils/helpers.ts}
+</details>
 
 Create a `src/components/` directory and add the following components: 
 
-- `ExplorerLink.tsx`:
+<details>
+  <summary>
+    `ExplorerLink.tsx`
+  </summary>
+  {@inject: examples/trading/frontend/src/components/ExplorerLink.tsx}
+</details>
 
-{@inject: examples/trading/frontend/src/components/ExplorerLink.tsx}
+<details>
+  <summary>
+    `InfiniteScrollArea.tsx`
+  </summary>
+  {@inject: examples/trading/frontend/src/components/InfiniteScrollArea.tsx}
+</details>
 
-- `InfiniteScrollArea.tsx`:
+<details>
+  <summary>
+    `Loading.tsx`
+  </summary>
+  {@inject: examples/trading/frontend/src/components/Loading.tsx}
+</details>
 
-{@inject: examples/trading/frontend/src/components/InfiniteScrollArea.tsx}
-
-- `Loading.tsx`:
-
-{@inject: examples/trading/frontend/src/components/Loading.tsx}
-
-- `SuiObjectDisplay.tsx`:
-
-{@inject: examples/trading/frontend/src/components/SuiObjectDisplay.tsx}
+<details>
+  <summary>
+    `SuiObjectDisplay.tsx`
+  </summary>
+  {@inject: examples/trading/frontend/src/components/SuiObjectDisplay.tsx}
+</details>
 
 ### Set up routing
 
