--- a/docs/content/guides/developer/app-examples/trustless-swap.mdx
+++ b/docs/content/guides/developer/app-examples/trustless-swap.mdx
@@ -986,7 +986,15 @@ pnpm dev
 
 {@include: ../../../snippets/initialize-sui-client-cli.mdx}
 
-Next, configure the Sui CLI to use `testnet` as the active environment. If you haven't already set up a `testnet` environment, do so by running the following command in a terminal or console:
+Next, configure the Sui CLI to use `testnet` as the active environment. 
+
+Use the following command to list your available environments:
+
+```bash
+sui client envs
+```
+
+If you haven't already set up a `testnet` environment, do so by running the following command in a terminal or console:
 
 ```bash
 sui client new-env --alias testnet --rpc https://fullnode.testnet.sui.io:443
@@ -998,7 +1006,13 @@ Run the following command to activate the `testnet` environment:
 sui client switch --env testnet
 ```
 
-Before being able to publish your package to Testnet, you need Testnet SUI tokens. To get some, join the [Sui Discord](https://discord.gg/Sui), complete the verification steps, enter the `#testnet-faucet` channel and type `!faucet <WALLET ADDRESS>`. For other ways to get SUI in your Testnet account, see [Get SUI Tokens](/guides/developer/getting-started/get-coins).
+Before being able to publish your package to Testnet, you need Testnet SUI tokens. To get some, run the following command: 
+
+```bash
+sui client faucet
+```
+
+For other ways to get SUI in your Testnet account, see [Get SUI Tokens](/guides/developer/getting-started/get-coins).
 
 Now that you have an account with some Testnet SUI, you can deploy your contracts. 
 
