--- a/docs/content/guides/developer/app-examples/trustless-swap.mdx
+++ b/docs/content/guides/developer/app-examples/trustless-swap.mdx
@@ -1004,13 +1004,15 @@ Now that you have an indexer and an API service, you can deploy your move packag
 
   There are some helper functions to publish the smart contract so you can create some demo data (for Testnet).
 
-  To produce demo data:
+  To publish the smart contract and produce demo data: 
 
-  1. Publish the smart contract by running
+  1. Publish the smart contract by running: 
 
       ```
       npx ts-node helpers/publish-contracts.ts
       ```
+
+      If successful, `demo-contract.json` and `escrow-contract.json` will be created in the backend's root directory. These files contain the contract addresses and are used by the backend and frontend to interact with the contracts.
 
   2. Produce demo non-locked and locked objects
 
@@ -1024,7 +1026,7 @@ Now that you have an indexer and an API service, you can deploy your move packag
       npx ts-node helpers/create-demo-escrows.ts
       ```
 
-  If you want to reset the database (start from scratch), run `pnpm db:reset:dev && pnpm db:setup:dev` or `yarn db:reset:dev && yarn db:setup:dev`.
+  If you want to reset the database (for a clean demo, etc.), run `pnpm db:reset:dev && pnpm db:setup:dev` or `yarn db:reset:dev && yarn db:setup:dev`.
 </details>
 
 4. Run both the API and the indexer by running `pnpm dev` or `yarn dev`.
